--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -166,6 +166,7 @@
     </Compile>
     <Compile Include="Utils\Badge.cs" />
     <Compile Include="Utils\ImageHelper.cs" />
+    <Compile Include="Utils\Mailer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Libraries\MigraDoc.DocumentObjectModel.dll" />
