videos page now exists and works
found a couple bugs added when trying to fix minor bugs with file management (filename not showing up right because of a +1 error and stuff not deleting because of an improper negation)

we could benefit from unit tests. anyone?

fixes #109, #36
refs #86

--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -196,6 +196,7 @@
     <Content Include="Views\PageManager\Edit.aspx" />
     <Content Include="Views\PageManager\Index.aspx" />
     <Content Include="Views\Page\Display.aspx" />
+    <Content Include="Views\Schedule\Videos.aspx" />
     <Content Include="Views\Shared\PageNotFound.aspx" />
     <Content Include="Views\StaffMember\Create.aspx" />
     <Content Include="Views\StaffMember\Edit.aspx" />
