Custom Membership provider allows for using our existing schema for user authentication
refs #82

--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -167,6 +167,7 @@
       <DependentUpon>Settings.resx</DependentUpon>
     </Compile>
     <Compile Include="Utils\Badge.cs" />
+    <Compile Include="Utils\ConferenceMemberProvider.cs" />
     <Compile Include="Utils\ImageHelper.cs" />
     <Compile Include="Utils\Mailer.cs" />
   </ItemGroup>
