--- a/Conferenceware/Web.config
+++ b/Conferenceware/Web.config
@@ -53,10 +53,10 @@
 		<authentication mode="Forms">
 			<forms loginUrl="~/Account/LogOn" timeout="2880"/>
 		</authentication>
-		<membership>
+		<membership defaultProvider="ConferenceMemberProvider">
 			<providers>
 				<clear/>
-				<add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" passwordFormat="Hashed" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" passwordStrengthRegularExpression="" applicationName="/"/>
+				<add name="ConferenceMemberProvider" type="ConferenceMemberProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" passwordFormat="Hashed" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" passwordStrengthRegularExpression="" applicationName="/"/>
 			</providers>
 		</membership>
 		<profile>
