simplified a little, but it actually works as expected for authentication. now to add password stuff
refs #82

--- a/Conferenceware/Web.config
+++ b/Conferenceware/Web.config
@@ -56,7 +56,8 @@
 		<membership defaultProvider="ConferenceMemberProvider">
 			<providers>
 				<clear/>
-				<add name="ConferenceMemberProvider" type="ConferenceMemberProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" passwordFormat="Hashed" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" passwordStrengthRegularExpression="" applicationName="/"/>
+				<!--<add name="ConferenceMemberProvider" type="Conferenceware.Utils.ConferenceMemberProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" passwordFormat="Hashed" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" passwordStrengthRegularExpression="" applicationName="/"/>-->
+        <add name="ConferenceMemberProvider" type="Conferenceware.Utils.ConferenceMemberProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="false" />
 			</providers>
 		</membership>
 		<profile>
