select all/none is working now for email. similar seems like it needs to be added to volunteer time slot lists.
for clean up, also need better interface for date/time selection (at least a date picker) and to make tables look reasonable

refs #119, #114

--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -208,6 +208,7 @@
     <Content Include="Views\Event\EventContentLinkNotFound.aspx" />
     <Content Include="Views\Event\RemoveContentLink.aspx" />
     <Content Include="Views\Event\UploadContent.aspx" />
+    <Content Include="Views\Food\FoodIsInvalid.aspx" />
     <Content Include="Views\PageManager\Create.aspx" />
     <Content Include="Views\PageManager\Delete.aspx" />
     <Content Include="Views\PageManager\Details.aspx" />
