--- a/Conferenceware.SetupExtensions/Conferenceware.SetupExtensions.csproj
+++ b/Conferenceware.SetupExtensions/Conferenceware.SetupExtensions.csproj
@@ -36,6 +36,10 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data.Linq">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -54,6 +58,12 @@
   <ItemGroup>
     <None Include="generate_database.sql" />
     <None Include="kill_database.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Conferenceware\Conferenceware.csproj">
+      <Project>{2CBE9479-CAAA-4A28-828F-180E876D53CC}</Project>
+      <Name>Conferenceware</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
