Events now auto unregister people from that event on delete. Added delete view to confirm this to the user.
fixes #116

--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -205,6 +205,7 @@
     <Content Include="Views\Badge\Index.aspx" />
     <Content Include="Views\Email\Index.aspx" />
     <Content Include="Views\Event\AddLink.aspx" />
+    <Content Include="Views\Event\Delete.aspx" />
     <Content Include="Views\Event\EventContentLinkNotFound.aspx" />
     <Content Include="Views\Event\RemoveContentLink.aspx" />
     <Content Include="Views\Event\UploadContent.aspx" />
