--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -174,6 +174,8 @@
   <ItemGroup>
     <Content Include="App_Data\WiLstPrd.vbs" />
     <Content Include="App_Data\WiRunSQL.vbs" />
+    <Content Include="Content\img\logo.png" />
+    <Content Include="Content\img\top.gif" />
     <Content Include="Content\south-street\images\ui-bg_glass_55_fcf0ba_1x400.png" />
     <Content Include="Content\south-street\images\ui-bg_gloss-wave_100_ece8da_500x100.png" />
     <Content Include="Content\south-street\images\ui-bg_highlight-hard_100_f5f3e5_1x100.png" />
@@ -190,6 +192,9 @@
     <Content Include="Content\south-street\images\ui-icons_eeeeee_256x240.png" />
     <Content Include="Content\south-street\images\ui-icons_ffffff_256x240.png" />
     <Content Include="Content\south-street\jquery-ui-1.7.2.custom.css" />
+    <Content Include="Content\timepicker.css" />
+    <Content Include="Scripts\site-global.js" />
+    <Content Include="Scripts\timepicker.js" />
     <Content Include="Libraries\MigraDoc.DocumentObjectModel.dll" />
     <Content Include="Libraries\MigraDoc.Rendering.dll" />
     <Content Include="Libraries\MigraDoc.RtfRendering.dll" />
@@ -202,6 +207,8 @@
     <None Include="Resources\staff.png" />
     <None Include="Resources\volunteer.png" />
     <Content Include="Scripts\jquery-ui-1.7.2.custom.min.js" />
+    <Content Include="Scripts\jquery_ui_datepicker.js" />
+    <Content Include="Scripts\ui.datepicker-de.js" />
     <Content Include="Views\Badge\Index.aspx" />
     <Content Include="Views\Email\Index.aspx" />
     <Content Include="Views\Event\AddLink.aspx" />
