--- a/Conferenceware.Tests/Conferenceware.Tests.csproj
+++ b/Conferenceware.Tests/Conferenceware.Tests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Models\LocationTests.cs" />
     <Compile Include="Models\RepositoryLocationTests.cs" />
     <Compile Include="Models\RepositoryTimeSlotTests.cs" />
+    <Compile Include="Models\RepositoryTShirtSizeTests.cs" />
     <Compile Include="Models\TestRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
