added tests for events. also made it so tests can use a generic irepository
refs #12

--- a/Conferenceware.Tests/Conferenceware.Tests.csproj
+++ b/Conferenceware.Tests/Conferenceware.Tests.csproj
@@ -60,6 +60,8 @@
     <Compile Include="Controllers\FoodControllerTest.cs" />
     <Compile Include="Controllers\LocationControllerTests.cs" />
     <Compile Include="Models\LocationTests.cs" />
+    <Compile Include="Models\RepositoryEventTests.cs" />
+    <Compile Include="Models\RepositoryFactory.cs" />
     <Compile Include="Models\RepositoryLocationTests.cs" />
     <Compile Include="Models\RepositoryTimeSlotTests.cs" />
     <Compile Include="Models\RepositoryTShirtSizeTests.cs" />
