--- a/Conferenceware.Tests/Conferenceware.Tests.csproj
+++ b/Conferenceware.Tests/Conferenceware.Tests.csproj
@@ -32,6 +32,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Moq, Version=4.0.812.4, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -60,6 +64,7 @@
     <Compile Include="Controllers\FoodControllerTest.cs" />
     <Compile Include="Controllers\LocationControllerTests.cs" />
     <Compile Include="Models\LocationTests.cs" />
+    <Compile Include="Models\RepositoryAttendeeTests.cs" />
     <Compile Include="Models\RepositoryEventTests.cs" />
     <Compile Include="Models\RepositoryFactory.cs" />
     <Compile Include="Models\RepositoryLocationTests.cs" />
