--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 #ignore thumbnails created by windows
 Thumbs.db
 #Ignore files build by Visual Studio
@@ -30,3 +31,5 @@ Conferenceware/vpproject/Conferenceware.vpp
 *.orig
 *.resource
 *.resources
+_Upgrade*/
+UpgradeLog.XML
