--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -229,6 +229,7 @@
     <Content Include="Scripts\ui.datepicker-de.js" />
     <Content Include="Views\AttendeeCheckIn\CheckInSearchForm.ascx" />
     <Content Include="Views\AttendeeCheckIn\Index.aspx" />
+    <Content Include="Views\AttendeeCheckIn\Search.aspx" />
     <Content Include="Views\Shared\RegistrationClosed.aspx" />
     <Content Include="Views\Badge\Index.aspx" />
     <Content Include="Views\Email\Index.aspx" />
