--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -230,6 +230,7 @@
     <Content Include="Views\AttendeeCheckIn\CheckInSearchForm.ascx" />
     <Content Include="Views\AttendeeCheckIn\Index.aspx" />
     <Content Include="Views\AttendeeCheckIn\Search.aspx" />
+    <Content Include="Views\Company\Delete.aspx" />
     <Content Include="Views\Shared\RegistrationClosed.aspx" />
     <Content Include="Views\Badge\Index.aspx" />
     <Content Include="Views\Email\Index.aspx" />
