can at least try to download the currently almost working ish invoices.
refactored the badgepdf code to work via an inherited system

currently getting object desposed on the memory stream

--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Controllers\PageController.cs" />
     <Compile Include="Controllers\PageManagerController.cs" />
     <Compile Include="Controllers\BadgePdfResult.cs" />
+    <Compile Include="Controllers\PdfResult.cs" />
     <Compile Include="Controllers\PngResult.cs" />
     <Compile Include="Controllers\ScheduleController.cs" />
     <Compile Include="Controllers\SettingsController.cs" />
