--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -212,6 +212,7 @@
     <Content Include="Content\south-street\images\ui-icons_ffffff_256x240.png" />
     <Content Include="Content\south-street\jquery-ui-1.7.2.custom.css" />
     <Content Include="Content\timepicker.css" />
+    <Content Include="Resources\logo.png" />
     <Content Include="Scripts\site-global.js" />
     <Content Include="Scripts\timepicker.js" />
     <Content Include="Libraries\MigraDoc.DocumentObjectModel.dll" />
