no view yet, but the code for handling the email being sent is there
i think there might be a desire to populate the body and subject with default data. i'm not handling this now, but maybe later. it might make sending invoices faster, but i'm not sure. if almost all messages are the same, then it might be useful.

--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Models\AttendeeMetadata.cs" />
     <Compile Include="Models\Company.cs" />
     <Compile Include="Models\CompanyInvoice.cs" />
+    <Compile Include="Models\CompanyInvoiceEmailEditData.cs" />
     <Compile Include="Models\CompanyInvoiceItem.cs" />
     <Compile Include="Models\CompanyInvoiceItemMetadata.cs" />
     <Compile Include="Models\CompanyInvoiceMetadata.cs" />
