working on being able to send volunteer time slots
updated database so time slots know about the integers for scheduling (not used) and that the link can contain a comment (possibly for who is being recorded)

added attribute for string contains. is much nicer that huge regular expressions. TODO: remove the large regular expressions that check for it and use [StringContains("foo")] instead

references #3

--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Controllers\PdfResult.cs" />
     <Compile Include="Controllers\PngResult.cs" />
     <Compile Include="Controllers\ScheduleController.cs" />
+    <Compile Include="Controllers\SchedulingController.cs" />
     <Compile Include="Controllers\SettingsController.cs" />
     <Compile Include="Controllers\SpeakerController.cs" />
     <Compile Include="Controllers\SpeakerInfoController.cs" />
@@ -190,6 +191,7 @@
     <Compile Include="Utils\Badge.cs" />
     <Compile Include="Utils\ConferenceMemberProvider.cs" />
     <Compile Include="Utils\Mailer.cs" />
+    <Compile Include="Utils\StringContainsAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\WiLstPrd.vbs" />
