fixed bug where 0 wasn't infinite like the display said for registration numbers
volunteers now can choose food and t shirt sizes

NOTE: Non ACM@UIUC people will want to change the static string used for email on the volunteer registration page now

some refactoring

--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -237,6 +237,9 @@
     <Content Include="Views\AttendeeCheckIn\Search.aspx" />
     <Content Include="Views\CompanyInvoice\Email.aspx" />
     <Content Include="Views\Company\Delete.aspx" />
+    <Content Include="Views\Scheduling\Index.aspx" />
+    <Content Include="Views\Scheduling\PreviewEmail.aspx" />
+    <Content Include="Views\Scheduling\SendComplete.aspx" />
     <Content Include="Views\Shared\RegistrationClosed.aspx" />
     <Content Include="Views\Badge\Index.aspx" />
     <Content Include="Views\Email\Index.aspx" />
