--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -213,9 +213,11 @@
     <Content Include="Content\south-street\images\ui-icons_cd0a0a_256x240.png" />
     <Content Include="Content\south-street\images\ui-icons_eeeeee_256x240.png" />
     <Content Include="Content\south-street\images\ui-icons_ffffff_256x240.png" />
-    <Content Include="Content\south-street\jquery-ui-1.7.2.custom.css" />
+    <Content Include="Content\south-street\jquery-ui-1.8.4.custom.css" />
     <Content Include="Content\timepicker.css" />
     <Content Include="Resources\logo.png" />
+    <Content Include="Scripts\jquery-1.4.2.min.js" />
+    <Content Include="Scripts\jquery-ui-1.8.4.custom.min.js" />
     <Content Include="Scripts\site-global.js" />
     <Content Include="Scripts\timepicker.js" />
     <Content Include="Libraries\MigraDoc.DocumentObjectModel.dll" />
