--- a/Conferenceware.SetupExtensions/Conferenceware.SetupExtensions.csproj
+++ b/Conferenceware.SetupExtensions/Conferenceware.SetupExtensions.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Data.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
